# seily-ai

./: CONTEXT-OPTIMIZATION-APPLIED.md  CONTEXT-OPTIMIZATION-STRATEGY.md  EXAMPLE-OPTIMIZED-SDD-APPLY.md  README.md  install.sh  optimize-context.sh
adapters/: antigravity.sh  claude.sh  copilot.sh  kiro.sh  opencode.sh
bundle/agents/: sdd-orchestrator.json  tech-lead.json
bundle/agents/kiro/: sdd-apply.json  sdd-archive.json  sdd-design.json  sdd-explore.json  sdd-init.json  sdd-orchestrator.json  sdd-propose.json  sdd-spec.json  sdd-task.json  sdd-verify.json  tech-lead.json
bundle/skills/sdd-apply/: SKILL.md
bundle/skills/sdd-archive/: SKILL.md
bundle/skills/sdd-design/: SKILL.md
bundle/skills/sdd-explore/: SKILL.md
bundle/skills/sdd-propose/: SKILL.md
bundle/skills/sdd-spec/: SKILL.md
bundle/skills/sdd-task/: SKILL.md
bundle/skills/sdd-verify/: SKILL.md
docs/: SDD-GUIDE.md
lib/: common.sh  menu.sh  transform.sh
memory-cli/: Cargo.toml
memory-cli/src/: db.rs  main.rs  types.rs
openspec/: config.yaml
openspec/changes/memory-cli/: archive.md  design.md  prd.md  proposal.md  specs.md  tasks.md
