[package]
name = "sailymem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sailymem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
